Change radio form element to use clip path instead of border radio to avoid off-center rendering on mobile

--- a/src/components/form.scss
+++ b/src/components/form.scss
@@ -88,13 +88,14 @@
 
   &::before {
     content: '';
-    width: var(--rm-space-small);
-    height: var(--rm-space-small);
-    border-radius: var(--rm-radius-circle);
+    width: var(--rm-space-medium);
+    height: var(--rm-space-medium);
 
     transform: scale(0);
     transition: var(--rm-transition-input) transform ease-in-out;
-    box-shadow: inset 0 var(--rm-space-small) var(--rm-color-primary-base);
+    box-shadow: inset 0 var(--rm-space-medium) var(--rm-color-primary-base);
+
+    clip-path: circle(40% at 50% 50%);
   }
 
   &:checked {
@@ -117,7 +118,7 @@
     box-shadow: var(--rm-border-all) var(--rm-border-color);
 
     &::before {
-      box-shadow: inset 0 var(--rm-space-small) var(--rm-border-color);
+      box-shadow: inset 0 var(--rm-space-medium) var(--rm-border-color);
     }
 
     + label {
@@ -139,7 +140,6 @@
 
     transform-origin: center;
 
-    // This does feel a bit magic but it's what makes the checkmark shape.
     clip-path: var(--rm-clippath-form-checkmark);
   }
 }
